--- a/example/dialog.ui
+++ b/example/dialog.ui
@@ -111,6 +111,19 @@
     <string>打扫卫生</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_4">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>270</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>注销</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
